Adding some extra logging and making metrics thread safe